@@ -284,6 +284,8 @@ ve/Makefile
 gtkextra/Makefile
 examples/Makefile
 pixmaps/Makefile
+pixmaps/8x8/Makefile
+pixmaps/16x16/Makefile
 pixmaps/22x22/Makefile
 pixmaps/24x24/Makefile
 pixmaps/32x32/Makefile
