@@ -1,3 +1,8 @@
+Mon Oct 06 13:08:52 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* pixmaps/*: add scaled 8x8 and 16x16 scaled versions of the icon,
+	  by slightly tweaking gimps scaling of the icon.
+
 Thu Oct 02 23:28:29 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/genius.xml: slight update
